# agent-dasc-extended

./: .gitignore
backend/: .gitignore  README.md  generate_synthetic_data.py  llm_router.py  main.py  pyproject.toml  pytest.ini
backend/agents/: analyzer.py  coder.py  debugger.py  executor.py  finalizer.py  graph.py  planner.py  router_agent.py  state.py  verifier.py
backend/tests/: conftest.py  test_end_to_end.py  test_graph_build.py  test_llm_router.py  test_main.py  test_planner.py  test_state.py
docs/product-lifecycle/: README.md
docs/product-lifecycle/00-discovery/: 00-process-discussion.md  01-paper-analysis.md  02-one-pager.md  03-architecture-v2.html  03-requirements-discovery.md  04-architecture-decisions.md  05-feature-discussion.md
docs/product-lifecycle/01-prd/: 01-prd-cbuae-fip.md  01-prd-domain-agnostic-agent.md
docs/product-lifecycle/02-ux-design/mockups/: 01-chat.html  02-dashboard-insight.html  03-dashboard-research.html  04-result-insight.html  05-result-research.html  06-dataset-selection.html  07-admin-health.html  index.html  presentation.html
docs/product-lifecycle/03-tdd/: 01-tdd-cbuae-fip.md  01-tdd-domain-agnostic-agent.md
docs/product-lifecycle/04-security-privacy/: 01-security-review.md
sandbox/: Dockerfile  requirements.txt
