[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "langgraph>=1.2.4",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
